--- a/package.json
+++ b/package.json
@@ -1,5 +1,19 @@
 {
   "name": "andrestephano",
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "actioncable": "^5.1.1",
+    "breakfast-rails": "^0.6.2",
+    "jquery": "^3.2.1",
+    "jquery-ujs": "^1.2.2",
+    "turbolinks": "^5.0.3"
+  },
+  "devDependencies": {
+    "babel": "^6.23.0",
+    "babel-brunch": "^6.1.1",
+    "brunch": "^2.10.9",
+    "clean-css-brunch": "^2.10.0",
+    "sass-brunch": "^2.10.4",
+    "uglify-js-brunch": "^2.10.0"
+  }
 }
