--- a/package.json
+++ b/package.json
@@ -6,7 +6,17 @@
     "breakfast-rails": "^0.6.2",
     "jquery": "^3.2.1",
     "jquery-ujs": "^1.2.2",
-    "turbolinks": "^5.0.3"
+    "turbolinks": "^5.0.3",
+
+    "react": "^15.4.4",
+    "react-apollo": "^1.2.0",
+    "react-bootstrap": "^0.31.0",
+    "react-dom": "^15.4.2",
+    "react-redux": "^5.0.3",
+    "react-router": "^4.1.1",
+    "react-router-dom": "^4.1.1",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "babel": "^6.23.0",
@@ -14,6 +24,20 @@
     "brunch": "^2.10.9",
     "clean-css-brunch": "^2.10.0",
     "sass-brunch": "^2.10.4",
-    "uglify-js-brunch": "^2.10.0"
+    "uglify-js-brunch": "^2.10.0",
+
+    "babel-core": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
+    "chai": "^3.5.0",
+    "chai-jquery": "^2.0.0",
+    "clean-css-brunch": "~2.0.0",
+    "css-brunch": "~2.0.0",
+    "javascript-brunch": "^2.0.0",
+    "jsdom": "^8.1.0",
+    "mocha": "^3.4.1",
+    "react-addons-test-utils": "^15.5.1",
+    "sass-brunch": "^2.7.0",
+    "uglify-js-brunch": "~2.0.1"
   }
 }
