--- a/.babelrc
+++ b/.babelrc
@@ -2,7 +2,7 @@
   "presets": ["es2015", "react", "stage-1"],
   "plugins": [
     ["babel-plugin-module-alias", [
-      { "src": "./js", "expose": "approot" }
+      { "src": "./app/frontend/js", "expose": "approot" }
     ]],
     "transform-object-rest-spread"
   ]
