--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "andrestephano",
   "private": true,
+  "scripts": {
+    "test": "mocha --compilers js:babel-core/register --require ./spec/js/test_helper.js --recursive ./spec/js/",
+    "test:watch": "npm run test -- --watch"
+  },
   "dependencies": {
     "actioncable": "^5.1.1",
     "breakfast-rails": "^0.6.2",
